--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
           <div class="small text-muted">Sesi aktif: <span id="liveSessionLabel" class="fw-semibold">-</span></div>
         </div>
       </div>
- type="date" class="form-control form-control-sm">
+<div type="date" class="form-control form-control-sm">
   </div>
   <div class="ms-auto d-flex gap-2">
     <button id="btnNadiSaveActivity" class="btn btn-sm btn-primary">
