--- a/index.html
+++ b/index.html
@@ -543,34 +543,7 @@
     </div>
   </div>
 </div>
-  <div>
-    <label class="form-label mb-1">Tarikh Program</label>
-    <input id="nadiProgramDate"
-      <!-- Live Session Picker (baru) -->
-      <div class="row g-2 align-items-center mb-3" id="liveSessionPickerRow">
-        <div class="col-md-7">
-          <label class="form-label">Pilih Sesi (Live) — hari yang sama</label>
-          <div class="input-group">
-            <select id="nadiSessionSelect" class="form-select">
-              <option value="">(Memuat senarai sesi…)</option>
-            </select>
-            <button class="btn btn-outline-secondary" type="button" id="btnRefreshSessions"><i class="fa-solid fa-rotate-right"></i> Segar</button>
-            <button class="btn btn-primary" type="button" id="btnUseSession"><i class="fa-solid fa-link"></i> Guna</button>
-          </div>
-          <div class="form-text">Sesi ditentukan oleh <b>Tajuk Program</b> + <b>Tarikh</b>. Guna pilihan ini untuk kongsi jadual antara laptop A & B.</div>
-        </div>
-        <div class="col-md-5 text-md-end">
-          <div class="small text-muted">Sesi aktif: <span id="liveSessionLabel" class="fw-semibold">-</span></div>
-        </div>
-      </div>
- type="date" class="form-control form-control-sm">
   </div>
-  <div class="ms-auto d-flex gap-2">
-    <button id="btnNadiSaveActivity" class="btn btn-sm btn-primary">
-      <i class="bi bi-cloud-upload me-1"></i>Simpan Aktiviti (Semua)
-    </button>
-  </div>
-</div>
       <div class="card">
         <div class="card-body">
           <div class="nadi-scroll-container">
@@ -4221,5 +4194,200 @@ function useSelectedSession(){
 })();
 
 </script>
+
+<script>
+// === Patch (Aug 28, 2025): Stability + TCA Voucher logic + UI tidy ===
+
+// 2.1 Prevent accidental data loss: auto-save NADI table drafts to localStorage (per live session)
+(function(){
+  const KEY = () => {
+    const title = document.getElementById('nadiProgramTitle')?.value?.trim() || '(untitled)';
+    const date  = document.getElementById('nadiProgramDate')?.value?.trim() || '(nodate)';
+    return 'nadiDraft::' + title + '::' + date;
+  };
+
+  const container = document.getElementById('nadiContainer');
+  if (!container) return;
+
+  // Restore on load
+  try {
+    const raw = localStorage.getItem(KEY());
+    if (raw) {
+      const {html} = JSON.parse(raw);
+      if (html && !container.dataset.restored) {
+        container.innerHTML = html;
+        container.dataset.restored = "1";
+      }
+    }
+  } catch(e){ console.warn('Draft restore skipped:', e); }
+
+  // Save on any input/checkbox change in NADI rows (debounced)
+  let saveTimer;
+  container.addEventListener('input', scheduleSave, true);
+  container.addEventListener('change', scheduleSave, true);
+
+  function scheduleSave(){
+    clearTimeout(saveTimer);
+    saveTimer = setTimeout(saveDraft, 400);
+  }
+  function saveDraft(){
+    try {
+      localStorage.setItem(KEY(), JSON.stringify({ html: container.innerHTML }));
+    } catch(e) {
+      console.warn('Draft save failed:', e);
+    }
+  }
+
+  // When session title/date changes, migrate draft key (simple approach: clear old, start fresh)
+  ['nadiProgramTitle', 'nadiProgramDate'].forEach(id => {
+    const el = document.getElementById(id);
+    if (el) el.addEventListener('change', () => {
+      // clear autosave for previous key (optional — we skip to avoid data loss across edits)
+      // localStorage.removeItem(KEY());
+      scheduleSave();
+    });
+  });
+})();
+
+// 2.2 Voucher logic: when "TCA voucher" is ticked, enable date input & mark row as "voucherOnly"
+(function(){
+  const table = document.getElementById('nadiContainer');
+  if (!table) return;
+
+  // Event delegation for checkbox toggles
+  table.addEventListener('change', (ev) => {
+    const target = ev.target;
+    if (!(target instanceof HTMLElement)) return;
+
+    // Identify voucher checkbox by data attribute or header position
+    if (target.matches('input[type="checkbox"][data-col="voucher"], td[data-col="voucher"] input[type="checkbox"]')) {
+      const row = target.closest('tr');
+      if (!row) return;
+
+      const dateCell = row.querySelector('td[data-col="voucherDate"] input[type="date"]');
+      if (dateCell) {
+        dateCell.disabled = !target.checked;
+        if (!target.checked) dateCell.value = '';
+      }
+      row.dataset.voucherOnly = target.checked ? "1" : "";
+    }
+
+    // Sync "Layak" vs "Tidak Layak" with voucher: if voucher checked, uncheck both layak/tak-layak
+    if (target.matches('input[type="checkbox"][data-col="voucher"]')) {
+      const row = target.closest('tr');
+      if (!row) return;
+      const layak = row.querySelector('input[type="checkbox"][data-col="layak"]');
+      const tak   = row.querySelector('input[type="checkbox"][data-col="takLayak"]');
+      if (target.checked) {
+        if (layak) layak.checked = false;
+        if (tak)   tak.checked = false;
+      }
+    }
+  });
+
+  // Safety on first paint: ensure voucher date disabled when unchecked
+  requestAnimationFrame(() => {
+    table.querySelectorAll('tr').forEach(row => {
+      const voucher = row.querySelector('input[type="checkbox"][data-col="voucher"]');
+      const dateInp = row.querySelector('td[data-col="voucherDate"] input[type="date"]');
+      if (dateInp) dateInp.disabled = !(voucher && voucher.checked);
+    });
+  });
+})();
+
+// 2.3 Save behavior: exclude "voucherOnly" rows from Layak sheet save; instead push to TCA Call list (front-end fallback)
+(function(){
+  const btnSaveAll = document.getElementById('btnNadiSaveActivity');
+  const nadiContainer = document.getElementById('nadiContainer');
+  const tcaTable = document.getElementById('tcaCallTable') || document.getElementById('tcaCallList');
+
+  if (!btnSaveAll || !nadiContainer) return;
+
+  btnSaveAll.addEventListener('click', async (ev) => {
+    // If original code has its own handler, we let this patch run first and then return silently.
+    try {
+      const rows = Array.from(nadiContainer.querySelectorAll('tr'));
+      const voucherRows = [];
+      rows.forEach(tr => {
+        if (tr.dataset && tr.dataset.voucherOnly === "1") {
+          voucherRows.push(extractRow(tr));
+          // mark the row as already handled to avoid being saved to "Layak"
+          tr.dataset.excludeFromLayakSave = "1";
+        }
+      });
+
+      // Front-end fallback: append voucher rows to TCA Call list/table immediately if exists
+      if (voucherRows.length && tcaTable) {
+        const tbody = tcaTable.tagName.toLowerCase() === 'tbody' ? tcaTable : tcaTable.querySelector('tbody');
+        if (tbody) {
+          // remove placeholder if any
+          Array.from(tbody.querySelectorAll('tr')).forEach(r => {
+            if (r.children.length === 1 || r.textContent.includes('Memuat data')) r.remove();
+          });
+          voucherRows.forEach(r => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+              <td>${escape(r.nama)}</td>
+              <td>${escape(r.ic)}</td>
+              <td>${escape(r.telefon)}</td>
+              <td>${escape(r.alamat)}</td>
+              <td>${escape(r.tcaDate || '')}</td>
+              <td>Voucher</td>
+            `;
+            tbody.appendChild(tr);
+          });
+        }
+      }
+    } catch(e) {
+      console.warn('Voucher patch on save failed:', e);
+    }
+    // Do not prevent default; allow original handler to continue for non-voucher rows.
+  }, {capture:true});
+
+  function extractRow(tr){
+    const val = (sel) => {
+      const el = tr.querySelector(sel);
+      if (!el) return '';
+      if (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA' || el.tagName === 'SELECT') {
+        if (el.type === 'checkbox') return el.checked ? '1' : '';
+        return el.value || '';
+      }
+      return el.textContent.trim();
+    };
+    return {
+      nama:    val('td[data-col="nama"] input, td[data-col="nama"] .view-mode, td:nth-child(2) input, td:nth-child(2) .view-mode'),
+      ic:      val('td[data-col="ic"] input, td:nth-child(3) input'),
+      telefon: val('td[data-col="telefon"] input, td:nth-child(5) input'),
+      alamat:  val('td[data-col="alamat"] input, td:nth-child(6) input'),
+      tcaDate: val('td[data-col="voucherDate"] input[type="date"]'),
+    };
+  }
+
+  function escape(s){
+    return String(s||'').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m]));
+  }
+})();
+
+// 2.4 Hide the "Lihat semua (Live)" button if present anywhere
+(function(){
+  const btns = Array.from(document.querySelectorAll('button, a'));
+  btns.forEach(b => {
+    const t = (b.textContent || '').toLowerCase();
+    if (t.includes('lihat semua') && t.includes('live')) {
+      b.style.display = 'none';
+    }
+  });
+})();
+
+// 2.5 Minor UI tidy: ensure NADI toolbar buttons wrap neatly
+(function(){
+  const css = `.nadi-toolbar .btn{margin:2px}`;
+  const style = document.createElement('style');
+  style.textContent = css;
+  document.head.appendChild(style);
+})();
+
+</script>
+
 </body>
 </html>
